tests/machine/x/cpp/pure_global_fold.error
line 14: /workspace/mochi/tests/machine/x/cpp/pure_global_fold.cpp:14:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   14 | auto inc(auto x) {
      |          ^~~~
/workspace/mochi/tests/machine/x/cpp/pure_global_fold.cpp: In function ‘auto inc(auto:1)’:
/workspace/mochi/tests/machine/x/cpp/pure_global_fold.cpp:15:17: error: ‘k’ was not declared in this scope
   15 |     return (x + k);
      |                 ^

 13 | 
 14 | auto inc(auto x) {
 15 |     return (x + k);
